<resources>
    <string name="app_name">Cofefu</string>
    <string name="title_menu">Меню</string>
    <string name="title_cart">Корзина</string>
    <string name="title_order">Заказ</string>
    <string name="title_profile">Профиль</string>
    <string name="todo">TODO</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_example">LoginExampleActivity</string>
    <string name="my_cofefu">Мой cofefu</string>
    <string name="history_order">История заказов</string>
    <string name="feedback">Обратная связь</string>
    <string name="confim_tel">Подтвердить телефон</string>
    <string name="logout">Выйти из аккаунта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>